# F1-Tenth-Duke

./: .gitignore  .gitmodules  Automatic_Emergency_Braking.rst  Build.md  D415_Yolov5.rst  Depth_Camera  Depth_Camera.rst  README.md  SSD.md  configuring_nx.rst  connecting_host.rst  drive_autonomous.rst  drive_calib_odom.rst  driver_stack_setup.rst  git_command.md  mpc_node.py  optional_software_nx.rst  origin_reference_trajectory_副本.xlsx  refine.csv  refine4.csv
Code/: test_driving
Code/Raceline_Optimization/: main_globaltraj_f110.py  map_converter.ipynb  sanity_check.ipynb
Code/test_driving/: CMakeLists.txt  package.xml
Code/waypoint_generator/: CMakeLists.txt
Hokuyo_Lidar/: Hokuyo.md
Pages/: Automatic_Emergency_Braking.rst  Build.md  D415_Yolov5.rst  Depth_Camera.rst  MPC.rst  Raceline_opt.md  SLAM.md  SSD.md  configuring_nx.rst  connecting_host.rst  drive_manual.rst  driver_stack_setup.rst  git_command.md  particle_filter.md  simulator_install.md  software_setup.md
Trajectory/: trajectory_aftertuning.csv  trajectory_beforetuning.csv  trajectory_data_10.csv  trajectory_data_100.csv  trajectory_data_200.csv  trajectory_data_500.csv  trajectory_data_800.csv  trajectory_william_speed5.1.csv  trajectory_william_speed6.8.csv  trajectory_william_speed8.5.csv
VESC/: VESC_config.md
YOLOv5/yolov5-5.0/: detect.py
map/: Hudson_map.pgm  Hudson_map_1.pbm  Hudson_map_2.pbm  Melbourne_map.csv
map/csv/: Hudson1.csv  Hudson4.csv  (+6 more)
powerboardV9/: F1TENTH Powerboard V9.0 Data Sheet.docx  New PDU requirement.docx  powerboard_v9_pickandplace.docx  v9_BOM.xlsx
(+368 files in other folders)
