<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>test_driving</name>
  <version>0.0.1</version>
  <description>Test Driving </description>
  <maintainer email="hqjimmy9@gmail.com">f1tenth</maintainer>
  <license>MIT</license>

  <depend>ackermann_msgs</depend>
  <depend>urg_node</depend>
  <depend>joy</depend>
  <depend>joy_teleop</depend>
  <depend>rosbridge_server</depend>
  <depend>vesc</depend>
  <depend>ackermann_mux</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
